--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="publishedGames.html">Published Games</a></li>
+                    <li class="nav-item"><a class="nav-link" href="demoMainPage.html">Interactive Portfolio</a></li>
                 </ul>
             </div>
         </div>
