baska bir deneme

--- a/exampleDemoPage.html
+++ b/exampleDemoPage.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Deneme.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Deneme.data.br",
-        frameworkUrl: buildUrl + "/Deneme.framework.js.br",
-        codeUrl: buildUrl + "/Deneme.wasm.br",
+        dataUrl: buildUrl + "/Deneme.data",
+        frameworkUrl: buildUrl + "/Deneme.framework.js",
+        codeUrl: buildUrl + "/Deneme.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "URPShaderLibrary",
