index page updated with new tech and experiences

--- a/index.html
+++ b/index.html
@@ -164,9 +164,15 @@
             </div>
 
             <div class="text-center mb-5">
+                <div class="pb-1 fa-2x">Alictus</div>
+                <div class="pb-2 fa-2x fw-lighter">Game Developer</div>
+                <div class="pb-3 fw-bolder">June 2023 - still continues </div>
+            </div>
+
+            <div class="text-center mb-5">
                 <div class="pb-1 fa-2x">Rooftop Games</div>
                 <div class="pb-2 fa-2x fw-lighter">Game Developer & Graphics Programmer</div>
-                <div class="pb-3 fw-bolder">January 2023 - still continues </div>
+                <div class="pb-3 fw-bolder">January 2023 - May 2023 </div>
             </div>
 
             <div class="container-narrow">
@@ -199,11 +205,9 @@
                             </div>
                             <div class="card-body px-2 py-2">
                                 <h4 class="fw-normal">● C# </h4>
-                                <h4 class="fw-normal">● HLSL - ShaderLab </h4>
-                                <h4 class="fw-normal">● C++ </h4>
-                                <h4 class="fw-normal">● Python </h4>
+                                <h4 class="fw-normal">● HLSL - MSL </h4>
                                 <h4 class="fw-normal">● Swift </h4>
-                                <h4 class="fw-normal">● MatLab </h4>
+                                <h4 class="fw-normal">● C++ </h4>
                             </div>
                         </div>
                     </div>
@@ -218,11 +222,9 @@
                             </div>
                             <div class="card-body px-2 py-2">
                             	<h4 class="fw-normal">● Unity 3D & DOTS </h4>
-                                <h4 class="fw-normal">● Unreal Engine </h4>
-                                <h4 class="fw-normal">● Graph Based Shader Editors </h4>
-                                <h4 class="fw-normal">● DirectX - OpenGL </h4>
-                                <h4 class="fw-normal">● Data Oriented Design </h4>
-                                <h4 class="fw-normal">● Software Architecture </h4>
+                                <h4 class="fw-normal">● Native iOS Development </h4>
+                                <h4 class="fw-normal">● Apple Metal Graphics </h4>
+                                <h4 class="fw-normal">● OpenGL </h4>
                             </div>
                         </div>
                     </div>
