--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
         <div class="container"><a class="link-dark navbar-brand site-title ps-lg-0" href="#"
-                                  style="font-family: 'MV Boli',serif">Welcome!</a>
+                                  style="font-family: '!important;',serif"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
@@ -37,9 +37,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="publishedGames.html">Published Games</a></li>
-                    <li class="nav-item"><a class="nav-link" href="exampleDemoPage.html">Interactive Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                 </ul>
             </div>
         </div>
@@ -84,7 +82,7 @@
                         </div>
                         </nav>
                         <div class="social-nav" data-aos="fade-right" data-aos-delay="200">
-                            <a class="cv-button" href="images/FurkanEmirogluResume.pdf" download> DOWNLOAD CV
+                            <a class="cv-button" href="folder/resume.pdf" download> My Resume
                             </a>
 
                             </nav>
@@ -103,11 +101,17 @@
                     <div class="col-md-6">
                         <h2 class="h4 my-2">About Me</h2>
                         <p>
+
+                        <div style="text-align: justify;">
+
                         Hello, I'm Furkan Emiroglu. Welcome to my portfolio page. You can see most of my work here.
 
                         I'm a passionate game developer who is capable of creating and publishing games form scratch in Unity.
-                        I can also create shaders, highly interested in render features and creating editor extensions that will make people's lives easier.
-                        Currently continuing my Master's Degree in Hacettepe University.
+
+                        I can also create shaders, confident in render features and creating editor tools.
+                        Currently continuing my Master's Degree studying Machine Learning & Data Science.
+
+                        </div>
 
                         <div class="row mt-3">
                             <div class="col-sm-2">
@@ -164,14 +168,20 @@
             </div>
 
             <div class="text-center mb-5">
+                <div class="pb-1 fa-2x">Udo Games</div>
+                <div class="pb-2 fa-2x fw-lighter">Tools & Support Engineer</div>
+                <div class="pb-3 fw-bolder">October 2023 - continues </div>
+            </div>
+
+            <div class="text-center mb-5">
                 <div class="pb-1 fa-2x">Alictus</div>
                 <div class="pb-2 fa-2x fw-lighter">Game Developer</div>
-                <div class="pb-3 fw-bolder">June 2023 - still continues </div>
+                <div class="pb-3 fw-bolder">June 2023 - Octobar 2023 </div>
             </div>
 
             <div class="text-center mb-5">
                 <div class="pb-1 fa-2x">Rooftop Games</div>
-                <div class="pb-2 fa-2x fw-lighter">Game Developer & Graphics Programmer</div>
+                <div class="pb-2 fa-2x fw-lighter">Game Developer</div>
                 <div class="pb-3 fw-bolder">January 2023 - May 2023 </div>
             </div>
 
@@ -230,59 +240,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="section px-3 px-lg-4 pt-5" id="projects">
-    <div class="container-narrow">
-        <div class="text-center mb-5">
-            <h2 class="marker marker-center">Projects</h2>
-        </div>
-        <div class="row">
-        	<div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
-                    <div class="card-header px-3 py-2">
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <h3 class="h5 mb-1"> ECS Architecture with ScriptableObjects</h3>
-                                <div class="text-muted text-small">
-                                    <small>(2023)</small>
-                                </div>
-                            </div>
-                            <a class="nav-link" href="https://github.com/FurkanEmiroglu/ECS-like-Architecture-with-ScriptableObjects"
-                               target="_blank"
-                               title="project1-link"><i class="fab fa-github"
-                                                        style="font-size: xx-large"></i></a>
-                        </div>
-                    </div>
-                    <div class="card-body px-2 py-1">
-                        <p style="font-style: italic">An ECS-like architecture research using scriptableobjects, heavily inspired by the Unite 2017 Ryan Hipple talk.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
-                    <div class="card-header px-3 py-2">
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <h3 class="h5 mb-1">Unity Improved Workflow Library</h3>
-                                <div class="text-muted text-small">
-                                    <small>(2023)</small>
-                                </div>
-                            </div>
-                            <a class="nav-link" href="https://github.com/FurkanEmiroglu/Unity-Improved-Workflow-Library"
-                               target="_blank"
-                               title="project1-link"><i class="fab fa-github"
-                                                        style="font-size: xx-large"></i></a>
-                        </div>
-                    </div>
-                    <div class="card-body px-2 py-1">
-                        <p style="font-style: italic;">A library contains Unity extensions, reusable scripts & lots of keyboard shortcuts that implements quality of life changes.</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
