resume removed from index page

--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
                         </div>
                         </nav>
                         <div class="social-nav" data-aos="fade-right" data-aos-delay="200">
-                            <a class="cv-button" href="folder/resume.pdf" download> My Resume
-                            </a>
-
-                            </nav>
-                                <a class="cv-button" href="publishedGames.html"> CLICK TO SEE MY PUBLISHED GAMES
+                            <a class="cv-button" href="folder/resume.pdf" download> My Projects
                             </a>
                         </div>
                     </div>
