- resume change but not ready

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
                         </nav>
                         <div class="social-nav" data-aos="fade-right" data-aos-delay="200">
-                            <a class="cv-button" href="index.html"> My Projects
+                            <a class="cv-button" href="index.html"> Resume
                             </a>
                         </div>
                     </div>
