- heat distortion moved into the projects.html

--- a/projects.html
+++ b/projects.html
@@ -125,7 +125,7 @@
                   <body>
                     <div class ="container">
                         <div class="boxed">
-                            <a href="https://gist.github.com/FurkanEmiroglu/a68085ae1b2874055c9882b4dddc9fc0">Heat Distortion Effect / HLSL & Shader Graph
+                            <a href="Projects/Heat Distortion/DistortionShaderDoc.html">Heat Distortion Effect / HLSL & Shader Graph
                                 <div class ="centeredThumbnail">
                                 <img src="Projects/Heat Distortion/thumbnail.gif" alt="thumbnail" class="centeredThumbnail">
                                 </div>
