--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p class="pres">Hi ! As a Tools Engineer, I enjoy working on <span class="blue">Shaders</span>, <span class="blue">CI/CD</span> pipelines, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools, <span class="blue">Generative AI</span>. I started coding in high school and continued in college developing  structural analysis tools at college as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> in Hacettepe University, studying <span class="blue">Data and Information Engineering</span>.
 
 <p class="pres">
-    I'm currently working as a Tools Engineer in Udo Games.
+    I'm currently working as a Tools Engineer in Udo Games. My responsibilities are:
     	<br>
  	<br> - Mentoring 10+ mobile game/app startups on technical problems, providing tools and recommending solutions.
 	<br> - Maintaining CI/CD pipeline, creating auto-building workflows on <span class="blue"> Jenkins/Codemagic.</span>
@@ -68,6 +68,23 @@ Heat Distortion
 </div>
 </article>
 
+
+<article>
+<a href="projects/upm-registry/upm-registry.html">
+<div class="roundFrame" style="background-image: url('projects/upm-registry/npmresult.png'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+NJs Package Registry
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">Store & Distribute your Packages</br>
+<span class="gray">NodeJS, JSON, YML</span></p>
+<p class="projectInformations">
+• Manage your dependencies easily</br>
+• Release new versions via single click.</br>
+</div>
+</article>
 
 
 <article>
