ecslike pattern with scriptableobjects added here.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,24 @@ NJs Package Registry
 
 
 <article>
+<a href="projects/ecs-wso/ecs-wso.html">
+<div class="roundFrame" style="background-image: url('projects/ecs-wso/ecs-wso.png'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+ECS Pattern
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">ECS design pattern with ScriptableObjects</br>
+<span class="gray">C#, DOTS, JOBS</span></p>
+<p class="projectInformations">
+• An easy way to shift your programming paradigms</br>
+• Can be an alternative to singletons.</br>
+</div>
+</article>
+
+
+<article>
 <a href="projects/heat-distortion/heat-distortion.html">
 <div class="roundFrame" style="background-image: url('https://github.com/FurkanEmiroglu/FurkanEmiroglu/blob/main/ShellTextured-Grass/ShellTexturedGrass.gif?raw=true'); background-position: center; background-size: cover;">
 <div class="projectFrameTitle">
