shell textured grass added.

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ ECS Pattern
 
 
 <article>
-<a href="projects/heat-distortion/heat-distortion.html">
-<div class="roundFrame" style="background-image: url('https://github.com/FurkanEmiroglu/FurkanEmiroglu/blob/main/ShellTextured-Grass/ShellTexturedGrass.gif?raw=true'); background-position: center; background-size: cover;">
+<a href="projects/shell-tex-grass/shell-tex-grass.html">
+<div class="roundFrame" style="background-image: url('projects/shell-tex-grass/shell-tex-grass.gif'); background-position: center; background-size: cover;">
 <div class="projectFrameTitle">
 Shell Textured Grass
 </div>
