stencil day/night added.

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ Shell Textured Grass
 
 
 <article>
-<a href="test.html">
-        <div class="roundFrame" style="background-image: url('https://github.com/FurkanEmiroglu/FurkanEmiroglu/blob/main/City-Transition-Stencil/city-transition-fullscreen.gif?raw=true'); background-position: center; background-size: cover;">
+<a href="projects/stencil-daynight/stencil-daynight.html">
+        <div class="roundFrame" style="background-image: url('projects/stencil-daynight/stencil-daynight.gif'); background-position: center; background-size: cover;">
 <div class="projectFrameTitle">
 Day/Night Transition
 </div>
