--- a/index.html
+++ b/index.html
@@ -50,23 +50,42 @@
 <section class="flexSection">
 
 
-
 <article>
-<a href="projects/heat-distortion/heat-distortion.html">
-<div class="roundFrame" style="background-image: url('projects/heat-distortion/thumbnail.gif'); background-position: center; background-size: cover;">
+<a href="projects/lightbake-tutor/lightbake-tutor.html">
+<div class="roundFrame" style="background-image: url('projects/lightbake-tutor/lightbake-tutor.gif'); background-position: center; background-size: cover;">
 <div class="projectFrameTitle">
-Heat Distortion
+Lightbaking
 </div>
 </div>
 </a>
 <div class="frameInfo">
-<p class="description">Heat Distortion VFX</br>
-<span class="gray">HLSL and Shader Graph Tutor</span></p>
+<p class="description">Lightbaking fundamentals in Unity</br>
+<span class="gray">C#</span></p>
 <p class="projectInformations">
-• Works in URP.</br>
-• Performant enough to work on mobile devices.</br></p>
+• Explains lightbaking fundemantals.</br>
+• Contains light probes too.</br></p>
 </div>
 </article>
+
+
+
+<article>
+<a href="projects/ecs-wso/ecs-wso.html">
+<div class="roundFrame" style="background-image: url('projects/ecs-wso/ecs-wso.png'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+ECS Pattern
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">ECS design pattern with ScriptableObjects</br>
+<span class="gray">C#, DOTS, JOBS</span></p>
+<p class="projectInformations">
+• An easy way to shift your programming paradigms</br>
+• Can be an alternative to singletons.</br>
+</div>
+</article>
+
 
 
 <article>
@@ -106,23 +125,6 @@ IW-Library
 </article>
 
 
-<article>
-<a href="projects/ecs-wso/ecs-wso.html">
-<div class="roundFrame" style="background-image: url('projects/ecs-wso/ecs-wso.png'); background-position: center; background-size: cover;">
-<div class="projectFrameTitle">
-ECS Pattern
-</div>
-</div>
-</a>
-<div class="frameInfo">
-<p class="description">ECS design pattern with ScriptableObjects</br>
-<span class="gray">C#, DOTS, JOBS</span></p>
-<p class="projectInformations">
-• An easy way to shift your programming paradigms</br>
-• Can be an alternative to singletons.</br>
-</div>
-</article>
-
 
 <article>
 <a href="projects/shell-tex-grass/shell-tex-grass.html">
@@ -139,6 +141,25 @@ Shell Textured Grass
 • Ultra performant</br>
 • Highly customizable</br>
 • Works flawlessly with VR and mobile devices.</br></p>
+</div>
+</article>
+
+
+
+<article>
+<a href="projects/heat-distortion/heat-distortion.html">
+<div class="roundFrame" style="background-image: url('projects/heat-distortion/thumbnail.gif'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+Heat Distortion
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">Heat Distortion VFX</br>
+<span class="gray">HLSL and Shader Graph Tutor</span></p>
+<p class="projectInformations">
+• Works in URP.</br>
+• Performant enough to work on mobile devices.</br></p>
 </div>
 </article>
 
