--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ Day/Night Transition
 
 
 <article>
-<a href="test.html">
-        <div class="roundFrame" style="background-image: url('https://github.com/FurkanEmiroglu/FurkanEmiroglu/blob/main/Blob-Raymarch-Showcase/blobraymarchshowcasevideo.gif?raw=true'); background-position: center; background-size: cover;">
+<a href="projects/rm-blob/rm-blob.html">
+        <div class="roundFrame" style="background-image: url('projects/rm-blob/rm-blob.gif'); background-position: center; background-size: cover;">
 <div class="projectFrameTitle">
 Raymarched Blob
 </div>
