gaussian blur added.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,26 @@ Raymarched Blob
 
 
 
+<article>
+<a href="projects/gaussianblur-pp/gaussianblur-pp.html">
+        <div class="roundFrame" style="background-image: url('projects/gaussianblur-pp/gaussianblur-pp.gif'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+Gaussian Blur
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">Unity</br>
+<span class="gray">Gaussian Blur Post Process</span></p>
+<p class="projectInformations">
+• Seperatable kernel gaussian blur. </br>
+• Faster then built-in solution. </br>
+• Supports mobile devices. </br>
+</div>
+</article>
+
+
+
 </section>
 </div>
 </section>
