vim source file added.

--- a/index.html
+++ b/index.html
@@ -222,6 +222,26 @@ Gaussian Blur
 
 
 
+
+<article>
+<a href="projects/myvimsource/myvimsource.html">
+        <div class="roundFrame" style="background-image: url('projects/myvimsource/myvimsource.jpg'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+Vim Src
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">Vim-Bash</br>
+<span class="gray">My vim source file</span></p>
+<p class="projectInformations">
+• It is here so i can easily share with my teammates </br>
+</div>
+</article>
+
+
+
+
 </section>
 </div>
 </section>
