--- a/index.html
+++ b/index.html
@@ -203,6 +203,24 @@ Raymarched Blob
 
 
 <article>
+<a href="projects/proceduralmaze/proceduralmaze.html">
+        <div class="roundFrame" style="background-image: url('projects/proceduralmaze/proceduralmaze.gif'); background-position: center; background-size: cover;">
+<div class="projectFrameTitle">
+Procedural Maze
+</div>
+</div>
+</a>
+<div class="frameInfo">
+<p class="description">Unity</br>
+<span class="gray">Procedural Maze Generation C#</span></p>
+<p class="projectInformations">
+• Uses recursive backtracking algorithm. </br>
+</div>
+</article>
+
+
+
+<article>
 <a href="projects/gaussianblur-pp/gaussianblur-pp.html">
         <div class="roundFrame" style="background-image: url('projects/gaussianblur-pp/gaussianblur-pp.gif'); background-position: center; background-size: cover;">
 <div class="projectFrameTitle">
