about me changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <main>
 <div class="shortPresentation">
-<p class="pres">Hi ! As a Tools Engineer, I enjoy working on <span class="blue">Shaders</span>, <span class="blue">CI/CD</span> pipelines, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools, <span class="blue">Generative AI</span>. I started coding in high school and continued in college developing  structural analysis tools at college as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> in Hacettepe University, studying <span class="blue">Data and Information Engineering</span>.
+<p class="pres">Hi ! As a Tools Engineer, I enjoy working on <span class="blue">Shaders</span>, <span class="blue">CI/CD</span> pipelines, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools, <span class="blue">Generative AI</span>. I started coding in high school and continued in developing  structural analysis tools as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> in Hacettepe University, studying <span class="blue">Data and Information Engineering</span>.
 
 <p class="pres">
     I'm currently working as a Tools Engineer in Udo Games. My responsibilities are:
