--- a/index.html
+++ b/index.html
@@ -26,22 +26,35 @@
 
 <main>
 <div class="shortPresentation">
-<p class="pres">Hi ! As a Tools Engineer, I enjoy working on <span class="blue">Shaders</span>, <span class="blue">CI/CD</span> pipelines, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools, <span class="blue">Generative AI</span>. I started coding in high school and continued in developing  structural analysis tools as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> in Hacettepe University, studying <span class="blue">Data and Information Engineering</span>.
+<p class="pres">Hi, I am a Game Developer specializing in graphics engineering. I enjoy working on <span class="blue">Shaders</span>, <span class="blue">CI/CD</span> pipelines, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools. I started coding in high school and continued in developing  structural analysis tools as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> in Hacettepe University, studying <span class="blue">Information Engineering</span>.
 
 <p class="pres">
-    I'm currently working as a Tools Engineer in Udo Games. My responsibilities are:
+    I'm currently working as a Tools & Solutions Engineer in Udo Games. My responsibilities are as follows but are not limited to:
     	<br>
- 	<br> - Mentoring 10+ mobile game/app startups on technical problems, providing tools and recommending solutions.
-	<br> - Maintaining CI/CD pipeline, creating auto-building workflows on <span class="blue"> Jenkins/Codemagic.</span>
+ 	<br> - <span class="blue"> Mentoring</span> 10+ mobile game startups on technical problems, providing tools and recommending solutions.
+	<br> - Maintanining <span class="blue"> 99.5%+</span> crash-free user experience rate as our projects scale up.
+	<br> - Developing custom <span class="blue">render features</span> from scratch.
+	<br> - Creating <span class="blue">VFX tools</span> from scratch.
+	<br> - Maintaining our<span class="blue"> CI/CD pipeline</span>, creating auto-building workflows on <span class="blue"> Jenkins/Codemagic.</span>
 	<br> - Resolving <span class="blue"> build issues</span>, managing native plugins for mobile games.
-	<br> - Creating multi-platform <span class="blue">Shaders</span> and <span class="blue">optimizing</span> them.
+	<br> - Creating multi-platform <span class="blue">shaders</span> and <span class="blue">optimizing</span> them.
 	<br> - Maintaining our internal tools library stored on <span class="blue">AWS</span>.
 	<br> - Maintaining our <span class="blue">Node.JS</span> package registry, compatible with the UPM.
-	<br> - Creating reliable build environments.
-	<br> - Developing custom render features and profiling GPU-related bottlenecks.
-	<br> - Optimizing async tasks on our SDK.
-	<br> - Developing remote configuration tools for <span class="blue">A/B</span> testing.
-	<br> - Extending Unity Editor functionality for increasing productivity.
+	<br> - Creating <span class="blue">reliable</span> build environments.
+	<br> - Providing remote configuration tools for <span class="blue">A/B</span> testing.
+	<br> - Extending Unity Editor functionality and increasing our team's productivity.
+</p>
+
+<p class="pres">
+	My tech stack:
+	<br>
+	<br> Engines: Unity, Unreal Engine
+	<br> Graphic APIs: Apple Metal Graphics, OpenGL
+	<br> Languages: C++, C#, HLSL, GLSL, Swift, JavaScript, Python, Bash
+	<br> DevOps: Docker, Reddis, Jenkins, Codemagic, GitOps, NPM, UPM
+	<br> SDKs: OneSignal, Firebase, Usercentrics, GameAnalytics, IronSource, Adjust, AppsFlyer
+	<br> VCS: Multi-threading, Shader Programming, Render Pipelines, Procedural Generation
+	<br> Concepts: Multi-threading, Shader Programming, Render Pipelines, Procedural Generation
 </p>
 </div>
 
@@ -66,7 +79,6 @@ Lightbaking
 • Contains light probes too.</br></p>
 </div>
 </article>
-
 
 
 <article>
