--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <main>
 <div class="shortPresentation">
-<p class="pres">Hi, I am a Game Developer specializing in graphics engineering. I enjoy working on <span class="blue">Shaders</span>, <span class="blue">CI/CD</span> pipelines, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools. I started coding in high school and continued in developing  structural analysis tools as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> in Hacettepe University, studying <span class="blue">Information Engineering</span>.
+<p class="pres">Hi, I am a Game Developer specializing in graphics engineering. I enjoy working on <span class="blue">Shaders</span>, <span class="blue">API-SDK</span> development, <span class="blue">Procedural Generation</span> tools and <span class="blue">CI/CD</span> pipelines. I started coding in high school and continued in developing structural analysis tools as a Civil Engineering student. After getting my Bachelor's Degree, I decided to continue my career in IT. Currently I'm studying ony my <span class="blue">Master's Degree</span> on Information Engineering at <span class="blue">Hacettepe University</span>.
 
 <p class="pres">
     I'm currently working as a Tools & Solutions Engineer in Udo Games. My responsibilities are as follows but are not limited to:
@@ -42,26 +42,25 @@
 	<br> - Maintaining our <span class="blue">Node.JS</span> package registry, compatible with the UPM.
 	<br> - Creating <span class="blue">reliable</span> build environments.
 	<br> - Providing remote configuration tools for <span class="blue">A/B</span> testing.
-	<br> - Extending Unity Editor functionality and increasing our team's productivity.
+	<br> - <span class="blue"> Extending</span> Unity Editor functionality and increasing our team's <span class="blue"> productivity</span>.
 </p>
 
 <p class="pres">
 	My tech stack:
 	<br>
 	<br> Engines: Unity, Unreal Engine
-	<br> Graphic APIs: Apple Metal Graphics, OpenGL
+	<br> Graphic APIs: Apple Metal Graphics, OpenGL, OpenGL ES
 	<br> Languages: C++, C#, HLSL, GLSL, Swift, JavaScript, Python, Bash
 	<br> DevOps: Docker, Reddis, Jenkins, Codemagic, GitOps, NPM, UPM
 	<br> SDKs: OneSignal, Firebase, Usercentrics, GameAnalytics, IronSource, Adjust, AppsFlyer
-	<br> VCS: Multi-threading, Shader Programming, Render Pipelines, Procedural Generation
-	<br> Concepts: Multi-threading, Shader Programming, Render Pipelines, Procedural Generation
+	<br> VCS: Git, PlasticSCM
+	<br> Domain: Parallel Programming, Shader Programming, Render Pipelines, Procedural Generation, 3D Mathematics, Trigonometry
 </p>
 </div>
 
 <div class="yearContainer">
 <h1>projects</h1>
 <section class="flexSection">
-
 
 <article>
 <a href="projects/lightbake-tutor/lightbake-tutor.html">
